--- a/src/components/NavBar/NavBarTop.css
+++ b/src/components/NavBar/NavBarTop.css
@@ -54,10 +54,6 @@
         display: block;
     }
 
-    .user-icon {
-        /* display: none; */
-    }
-
     .navbar-logo {
         position: absolute;
         top: 0;
